--- a/contacts.html
+++ b/contacts.html
@@ -53,14 +53,14 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
                             <div class="nano-content">
                 <dl>
-                  <dt>Способ</dt> <dd>Ссылка</dd>
+                  <dt>Источник</dt> <dd>Ссылка</dd>
                   <dt>E-mail</dt> <dd><a href="mailto:vaoooglu.dn@gmail.com" target="_blank" title=""><img src="img/contacts/7.svg" /></a></dd>
                   <dt>LinkedIn</dt> <dd><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" title=""><img src="img/contacts/6.svg" /></a></dd>
                   <!-- <dt>Blog</dt> <dd><a href="http://www.cartesiani.it" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd> -->
