--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               <div class="cover"></div>
               <ol class="social">
                 <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                 <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
               </ol>
             </div>
             <article class="nano">
@@ -70,7 +70,7 @@
 
                 <p>Вот список того, что <em>я делаю</em>:</p>
 
-                <h4>АДАПТИВНАЯ FRONTEND РАЗРАБОТКА</h4>
+                <h4>АДАПТИВНАЯ FRONT-END РАЗРАБОТКА</h4>
                 <p>Разработка <em>кросс-платформенных</em> (смартфон, планшет, desktop) и <em>кросс-браузерных</em> (Chrome, Firefox, Safari, IE >9) web-сайтов</p>
 
                 <h4>РАБОТА С ХОСТИНГОМ</h4>
