--- a/know-how.html
+++ b/know-how.html
@@ -53,52 +53,34 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
                             <div class="nano-content">
                 <dl>
-                  <dt>Skill</dt> <dd>Linkedin<br>Endorsers</dd>
-                  <dt>Data Visualization</dt> <dd>17</dd>
-                  <dt>Web Development</dt> <dd>14</dd>
-                  <dt>HTML5</dt> <dd>11</dd>
-                  <dt>CSS3</dt> <dd>11</dd>
-                  <dt>JavaScript</dt> <dd>9</dd>
-                  <dt>jQuery</dt> <dd>8</dd>
-                  <dt>D3.js</dt> <dd>7</dd>
-                  <dt>Information Design</dt> <dd>6</dd>
-                  <dt>Front-end</dt> <dd>6</dd>
-                  <dt>User Experience</dt> <dd>5</dd>
-                  <dt>SASS</dt> <dd>5</dd>
-                  <dt>Interaction Design</dt> <dd>5</dd>
-                  <dt>Responsive Layout</dt> <dd>4</dd>
-                  <dt>SVG</dt> <dd>4</dd>
-                  <dt>Frisbee</dt> <dd>4</dd>
-                  <dt>Wordpress</dt> <dd>3</dd>
-                  <dt>Compass</dt> <dd>3</dd>
-                  <dt>Foundation Zurb</dt> <dd>3</dd>
-                  <dt>User Interface Design</dt> <dd>3</dd>
-                  <dt>XHTML</dt> <dd>2</dd>
-                  <dt>Wireframes</dt> <dd>2</dd>
-                  <dt>SEO</dt> <dd>2</dd>
-                  <dt>CMS</dt> <dd>1</dd>
-                  <dt>Accessibility</dt> <dd>1</dd>
-                  <dt>Magento</dt> <dd>1</dd>
-                  <dt>Bootstrap</dt> <dd>1</dd>
-                  <dt>Svn</dt> <dd>1</dd>
-                  <dt>Git</dt> <dd>1</dd>
-                  <dt>Usability</dt> <dd>1</dd>
-                  <dt>PHP</dt> <dd>1</dd>
-                  <dt>Responsiveness</dt> <dd>1</dd>
-                  <dt>Newsletter</dt> <dd>1</dd>
-                  <dt>Canvas</dt><dd>-</dd>
-                  <dt>Three.js</dt><dd>-</dd>
-                  <dt>Greensock</dt><dd>-</dd>
-                  <dt>CartoDB</dt><dd>-</dd>
-                  <dt>Velocity.js</dt><dd>-</dd>
-                  <dt>Jekyll</dt><dd>-</dd>
+                  <dt>Скилы</dt> <dd><br></dd>
+                  <dt>Wordpress</dt> <dd></dd>
+                  <dt>Responsive верстка</dt> <dd></dd>
+                  <dt>HTML 5</dt> <dd></dd>
+                  <dt>CSS 3</dt> <dd></dd>
+                  <dt>Bootstrap 4</dt> <dd></dd>
+                  <dt>Sass</dt> <dd></dd>
+                  <dt>CSS Grid</dt> <dd></dd>
+                  <dt>Gulp</dt> <dd></dd>
+                  <dt>NodeJS</dt> <dd></dd>
+                  <dt>Git</dt> <dd></dd>
+                  <dt>jQuery</dt> <dd></dd>
+                  <dt>JavaScript</dt> <dd></dd>
+                  <dt>ES6</dt> <dd></dd>
+                  <dt>React.js</dt> <dd></dd>
+                  <dt>SEO</dt> <dd></dd>
+                  <dt>SVG</dt> <dd></dd>
+                  <dt>Photoshop</dt> <dd></dd>
+                  <!-- <dt>Wireframes</dt> <dd></dd> -->
+                  <!-- <dt>CMS</dt> <dd></dd> -->
+                  <!-- <dt>PHP</dt> <dd></dd> -->
               </dl>
               </div>
             </article>
