--- a/project-1.html
+++ b/project-1.html
@@ -52,8 +52,8 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
@@ -61,7 +61,7 @@
                 <h4>Корпоративный сайт предприятия</h4>
                 <p>Красивое дизайнерское решение, воплощенное в корпоративном стиле Компании.</p>
                 <p><strong>Инструменты: </strong><em>HTML5, CSS3 Animations, SVG Grafics, CMS Wordpress</em></p>
-                <a href="http://dngormash.ru" class="btn btn-link" target="_blank">
+                <a href="http://dngormash.ru" rel="nofollow" class="btn btn-link" target="_blank">
                   <svg>
                     <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                   </svg>
