--- a/project-2.html
+++ b/project-2.html
@@ -30,11 +30,11 @@
 
     <div class="header">
       <h1>
-        <strong>P</strong>r<strong>o</strong>j<strong>e</strong>c<strong>t</strong> 2<br><span><strong>H-</strong>FA<strong>RM</strong> ne<strong>tw</strong>ork</span>
+        <strong>П</strong>р<strong>о</strong>е<strong>к</strong>т<strong> 2</strong><br><span><strong>Ко</strong>мме<strong>рче</strong>ск<strong>ий</strong> са<strong>йт</strong> и<strong> бл</strong>ог</span>
       </h1>
       <div id="particles-js2"></div>
       <h1 class="front-title">
-        P<strong>r</strong>o<strong>j</strong>e<strong>c</strong>t <strong>2</strong><br><span>H-<strong>FA</strong>RM <strong>ne</strong>tw<strong>ork</strong></span>
+        П<strong>р</strong>о<strong>е</strong>к<strong>т</strong> 2<br><span>Ко<strong>мме</strong>рче<strong>ск</strong>ий<strong> са</strong>йт<strong> и</strong> бл<strong>ог</strong></span>
         </h1>
         <a href="#index-content" class="cd-scroll"><img src="img/arrow-down.svg" /></a>
         </div>
@@ -52,23 +52,23 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
                             <div class="nano-content">
-              <h4>H-FARM network</h4>
-                <p>Overall view of the startup accelerator in a single interactive visualization</p>
-                <p><strong>Tools: </strong><em>D3.js, HTML5, CSS3</em></p>
-                <a href="http://www.cartesiani.it/h-farm_visualization/index.html" class="btn btn-link" target="_blank">
+              <h4>Коммерческий сайт и блог</h4>
+                <p>Проект выглядит эстетично и выполнен в стиле минимализма и лаконичности.</p>
+                <p><strong>Инструменты: </strong><em>CSS3 Animations, SVG Grafics, JavaScript, CMS Wordpress </em></p>
+                <a href="http://orlenko-partners.com/" class="btn btn-link" target="_blank">
                   <svg>
                     <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                   </svg>
                  Перейти
                 </a>
 
-                <a href="#" target="_blank"><img src="img/farm.jpg" /></a>
+                <a href="#" target="_blank"><img src="img/orlenko.jpg" /></a>
               </div>
             </article>
 
