--- a/project-3.html
+++ b/project-3.html
@@ -30,11 +30,11 @@
 
     <div class="header">
       <h1>
-        <strong>P</strong>r<strong>o</strong>j<strong>e</strong>c<strong>t</strong> 3<br><span><strong>Th</strong>e <strong>Ti</strong>nd<strong>er</strong> re<strong>po</strong>rt</span>
+        <strong>П</strong>р<strong>о</strong>е<strong>к</strong>т<strong> 3</strong><br><span><strong>Мн</strong>ого<strong>яз</strong>ычн<strong>ый</strong> са<strong>йт</strong></span>
       </h1>
       <div id="particles-js2"></div>
       <h1 class="front-title">
-        P<strong>r</strong>o<strong>j</strong>e<strong>c</strong>t<strong> 3</strong><br><span>Th<strong>e</strong> Ti<strong>nd</strong>er <strong>re</strong>po<strong>rt</strong></span>
+        П<strong>р</strong>о<strong>е</strong>к<strong>т</strong> 3<br><span>Мн<strong>ого</strong>яз<strong>ычн</strong>ый <strong>са</strong>йт</span>
      </h1>
      <a href="#index-content" class="cd-scroll"><img src="img/arrow-down.svg" /></a>
      </div>
@@ -52,23 +52,23 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
                             <div class="nano-content">
-              <h4>The Tinder Report</h4>
-                <p>Animated sociological analysis about the first 100 matches on the dating app.</p>
-                <p><em><strong>Tools: </strong>HTML5, CSS3, GreenSock TweenMax</em></p>
-                <a href="http://www.cartesiani.it/tinder-report/" class="btn btn-link" target="_blank">
+              <h4>Многоязычный сайт</h4>
+                <p>Кроткий дизайн, максимум функционала и организация мультиязычного контента.</p>
+                <p><em><strong>Инструменты: </strong>HTML5, CSS3, CMS Wordpres, Plagin WPML</em></p>
+                <a href="https://www.barcelonasegwayglides.com" class="btn btn-link" target="_blank">
                   <svg>
                     <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                   </svg>
                   Перейти
                 </a>
 
-                <a href="#" target="_blank"><img src="img/tinder.png" /></a>
+                <a href="#" target="_blank"><img src="img/segway.jpg" /></a>
               </div>
             </article>
 
