--- a/project-4.html
+++ b/project-4.html
@@ -31,11 +31,11 @@
 
     <div class="header">
       <h1>
-        <strong>P</strong>r<strong>o</strong>j<strong>e</strong>c<strong>t</strong> 4<br><span><strong>Ex</strong>po <strong>20</strong>15 <strong>su</strong>pp<strong>li</strong>er<strong>s</strong></span>
+        <strong>П</strong>р<strong>о</strong>е<strong>к</strong>т<strong> 4</strong><br><span><strong>Лэн</strong>динг <strong>со</strong> скр<strong>олл</strong>ом<strong> эк</strong>ра<strong>нов</strong></span>
       </h1>
       <div id="particles-js2"></div>
       <h1 class="front-title">
-        P<strong>r</strong>o<strong>j</strong>e<strong>c</strong>t<strong> 4</strong><br><span>Ex<strong>po </strong>20<strong>15 </strong>su<strong>pp</strong>li<strong>er</strong>s</span>
+        П<strong>р</strong>о<strong>е</strong>к<strong>т</strong> 4</strong><br><span>Лэн<strong>динг </strong>со<strong> скр</strong>олл<strong>ом</strong> эк<strong>ра</strong>нов</span>
         </h1>
         <a href="#index-content" class="cd-scroll"><img src="img/arrow-down.svg" /></a>
         </div>
@@ -53,23 +53,23 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
                             <div class="nano-content">
-                <h4>EXPO 2015 Suppliers</h4>
-                <p>Interactive heatmap with 6990 suppliers of the "EXPO Milan 2015 - Feeding the Planet, Energy for Life".</p>
-                <p><em><strong>Tools: </strong>Cartodb, GPS Visualizer, OpenRefine</em></p>
-                <a href="http://cartesiani.it/mappa-fornitori-expo/" class="btn btn-link" target="_blank">
+                <h4>Лэндинг со скроллом экранов</h4>
+                <p>В проекте сделан акцент на продающий контент, правильную организацию форм обратной связи и поэкранный скролл.</p>
+                <p><em><strong>Инструменты: </strong>HTML5, CSS3, jQuery, fancybox, owl-carousel, slick</em></p>
+                <a href="http://oxrana.net/" class="btn btn-link" target="_blank">
                   <svg>
                     <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                   </svg>
                   Перейти
                 </a>
 
-                <a href="#" target="_blank"><img src="img/expo.jpg" /></a>
+                <a href="#" target="_blank"><img src="img/oxrana.jpg" /></a>
               </div>
             </article>
 
