--- a/projects.html
+++ b/projects.html
@@ -53,27 +53,29 @@
                             <div class="cover"></div>
                             <ol class="social">
                               <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                               <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
                             </ol>
                           </div>
                           <article class="nano">
                             <div class="nano-content">
               <p>
-                During my seven-years career I have developed <em>web pages</em> and <em>data-visualizations</em> for many companies, here's a list of the most important ones:
+                За время погружения в <em>отрасль IT</em> мной <em>разработаны и внедрены</em> много различных  <em>web-сайтов</em> для заказчиков из разных стран. Вот небольшой список работ, который периодически обновляется:
               </p>
-              <h4>Heineken</h4>
-              <h4>Nike</h4>
-              <h4>Nestle</h4>
-              <h4>Toyota</h4>
-              <h4>Diesel</h4>
-              <h4>Vespa</h4>
-              <h4>Versace</h4>
-              <h4>Telecom</h4>
-              <h4>TIM</h4>
-              <h4>Illy</h4>
+              <h4><a href="http://oxrana.net/" rel="nofollow" target="_blank">Вневедомственная охрана</a> </h4>
+              <h4><a href="http://dngormash.ru/" rel="nofollow" target="_blank">ГП "Донецкгормаш"</a> </h4>
+              <h4><a href="http://orlenko-partners.com" rel="nofollow" target="_blank">Orlenko&Partners</a> </h4>
+              <h4><a href="https://almaty-potolok.kz/" rel="nofollow" target="_blank">Almaty POTOLOK</a> </h4>
+              <h4><a href="https://www.barcelonasegwayglides.com" rel="nofollow" target="_blank">Barcelona Segway Glides</a> </h4>
+              <h4><a href="https://vaoooglu.github.io/slipper/" rel="nofollow" target="_blank">Slipper</a> </h4>
+              <h4><a href="http://wow-j.ru/land/" rel="nofollow" target="_blank">WOW - страницы организации вручения премии</a></h4>
+              <h4><a href="http://blagovest-kms.ru/" rel="nofollow" target="_blank">Благовест (благотворительный фонд) - соц.проект></a></h4>
+              <h4><a href="" rel="nofollow" target="_blank">Каталог камня</a></h4>
+              <h4><a href="http://promo.crocusfitness.com/crocus-city" rel="nofollow" target="_blank">Страницы акций для сети залов Crocus Fitness</a></h4>
+              <h4><a href="http://www.drivinglessonsdublin.ie/" rel="nofollow" target="_blank">Pinnacle driving school</a></h4>
+              
               <p>
-                Ниже Вы сможете найти ссылки на четыре свежих<em>реализованных проекта</em> где я закончил все этапы: концепт, разработку и реализацию.
+                Ниже Вы сможете найти ссылки на четыре<em> реализованных проекта</em>, где я закончил все этапы: концепт, разработку и реализацию.
               </p>
 
                 <div class='pageDetail'>
