--- a/project-4.html
+++ b/project-4.html
@@ -18,7 +18,7 @@
 
   <!-- <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-  <link rel="stylesheet" href="css/animsition.css">
+  <!-- <link rel="stylesheet" href="css/animsition.css"> -->
   <link rel="stylesheet" media="screen" href="css/style-particle.css">
   <link rel="stylesheet" media="screen" href="css/nanoscroller.css">
   <link rel="stylesheet" href="css/main.css"> <!-- Resource style -->
@@ -26,6 +26,151 @@
   <!-- <link rel="shortcut icon" href="img/favicon.png" /> -->
   <script src="js/modernizr.custom.js"></script> <!-- Modernizr -->
 </head>
+<div class="preloader-inner" id="preloader">
+    <div class="wrap">
+        <div class="preloader">
+            <p>WEBDEV</p>
+            <div class="svg_img">
+              <?xml version="1.0" encoding="iso-8859-1"?>
+              <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 504.123 504.123" style="enable-background:new 0 0 504.123 504.123;" xml:space="preserve">
+              <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="-14.2178" y1="627.332" x2="-14.2178" y2="527.085" gradientTransform="matrix(7.8769 0 0 -7.8769 364.0537 4969.6694)">
+                <stop  offset="0" style="stop-color:#29D3DA"/>
+                <stop  offset="0.519" style="stop-color:#0077FF"/>
+                <stop  offset="0.999" style="stop-color:#064093"/>
+                <stop  offset="1" style="stop-color:#084698"/>
+              </linearGradient>
+              <path id="second_item" style="fill:url(#SVGID_1_);" d="M252.062,341.929c-49.554,0-89.868-40.314-89.868-89.868s40.314-89.868,89.868-89.868
+                s89.868,40.314,89.868,89.868h-22.567c0-37.108-30.192-67.3-67.3-67.3s-67.3,30.192-67.3,67.3s30.192,67.3,67.3,67.3V341.929z"/>
+                 <animateTransform 
+                         xlink:href="#second_item"
+                         attributeName="transform" 
+                         attributeType="XML"
+                         type="rotate"
+                         from="0 252 252"
+                         to="360 252 252" 
+                         dur="2s"
+                         repeatCount="indefinite"
+                         />
+              <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="-14.2178" y1="636.082" x2="-14.2178" y2="494.3351" gradientTransform="matrix(7.8769 0 0 -7.8769 364.0537 4969.6694)">
+                <stop  offset="0.012" style="stop-color:#E0B386"/>
+                <stop  offset="0.519" style="stop-color:#DA498C"/>
+                <stop  offset="1" style="stop-color:#961484"/>
+              </linearGradient>
+              <path id="first_item" style="fill:url(#SVGID_2_);" d="M252.062,291.903c-21.969,0-39.834-17.873-39.834-39.841h22.56
+                c0,9.523,7.743,17.266,17.266,17.266c9.523,0,17.274-7.743,17.274-17.266c0-9.523-7.751-17.266-17.274-17.266v-22.567
+                c21.969,0,39.841,17.873,39.841,39.841S274.03,291.903,252.062,291.903z"/>
+                 <animateTransform 
+                         xlink:href="#first_item"
+                         attributeName="transform" 
+                         attributeType="XML"
+                         type="rotate"
+                         from="0 252 252"
+                         to="-360 252 252" 
+                         dur="1.5s"
+                         repeatCount="indefinite"
+                         />
+              <linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="-14.2178" y1="636.082" x2="-14.2178" y2="494.3351" gradientTransform="matrix(7.8769 0 0 -7.8769 364.0537 4969.6694)">
+                <stop  offset="0.012" style="stop-color:#E0B386"/>
+                <stop  offset="0.519" style="stop-color:#DA498C"/>
+                <stop  offset="1" style="stop-color:#961484"/>
+              </linearGradient>
+              <path id="third_item" style="fill:url(#SVGID_3_);" d="M252.062,400.415V377.84c69.356,0,125.787-56.422,125.787-125.779
+                s-56.43-125.779-125.787-125.779s-125.787,56.422-125.787,125.779h-22.567c0-81.81,66.552-148.354,148.354-148.354
+                s148.354,66.544,148.354,148.354S333.863,400.415,252.062,400.415z"/>
+                 <animateTransform 
+                         xlink:href="#third_item"
+                         attributeName="transform" 
+                         attributeType="XML"
+                         type="rotate"
+                         from="0 252 252"
+                         to="-360 252 252" 
+                         dur="2.5s"
+                         repeatCount="indefinite"
+                         />
+              <linearGradient id="SVGID_4_" gradientUnits="userSpaceOnUse" x1="-14.2183" y1="627.332" x2="-14.2183" y2="527.085" gradientTransform="matrix(7.8769 0 0 -7.8769 364.0537 4969.6694)">
+                <stop  offset="0" style="stop-color:#29D3DA"/>
+                <stop  offset="0.519" style="stop-color:#0077FF"/>
+                <stop  offset="0.999" style="stop-color:#064093"/>
+                <stop  offset="1" style="stop-color:#084698"/>
+              </linearGradient>
+              <path id="forth_item" style="fill:url(#SVGID_4_);" d="M252.062,454.333c-111.521,0-202.264-90.75-202.264-202.271S140.54,49.806,252.062,49.806
+                v22.567c-99.092,0-179.688,80.612-179.688,179.688c0,99.084,80.597,179.688,179.688,179.688
+                c99.084,0,179.688-80.605,179.688-179.688h22.567C454.325,363.583,363.583,454.333,252.062,454.333z"/>
+                 <animateTransform 
+                         xlink:href="#forth_item"
+                         attributeName="transform" 
+                         attributeType="XML"
+                         type="rotate"
+                         from="0 252 252"
+                         to="360 252 252" 
+                         dur="1.5s"
+                         repeatCount="indefinite"
+                         />
+              <linearGradient id="SVGID_5_" gradientUnits="userSpaceOnUse" x1="-14.2178" y1="636.082" x2="-14.2178" y2="494.3351" gradientTransform="matrix(7.8769 0 0 -7.8769 364.0537 4969.6694)">
+                <stop  offset="0.012" style="stop-color:#E0B386"/>
+                <stop  offset="0.519" style="stop-color:#DA498C"/>
+                <stop  offset="1" style="stop-color:#961484"/>
+              </linearGradient>
+              <path id="fiveth_item" style="fill:url(#SVGID_5_);" d="M252.062,504.123C113.073,504.123,0,391.05,0,252.062h22.567
+                c0,126.535,102.951,229.486,229.494,229.486s229.494-102.951,229.494-229.486S378.596,22.575,252.062,22.575V0
+                C391.05,0,504.123,113.073,504.123,252.062S391.05,504.123,252.062,504.123z"/>
+                 <animateTransform 
+                         xlink:href="#fiveth_item"
+                         attributeName="transform" 
+                         attributeType="XML"
+                         type="rotate"
+                         from="0 252 252"
+                         to="-360 252 252" 
+                         dur="1.5s"
+                         repeatCount="indefinite"
+                         />
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              </svg>
+            </div>
+            <div id="load">
+              <div>G</div>
+              <div>N</div>
+              <div>I</div>
+              <div>D</div>
+              <div>A</div>
+              <div>O</div>
+              <div>L</div>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
 <body id="project-4" class="project-detail">
   <div class="animsition">
 
@@ -148,7 +293,8 @@
       </div>
 </div>
 <script src="js/jquery-1.11.3.min.js"></script>
-  <script src="js/animsition.min.js"></script>
+  <!-- <script src="js/animsition.min.js"></script> -->
+  <script src="js/preloader.js"></script>
   <script src="js/particles.min.js"></script>
   <script src="js/velocity.min.js"></script>
   <script src="js/velocity.ui.min.js"></script>
@@ -162,28 +308,28 @@
     var $window = $(window),
     $document = $(document)
 
-    $(".animsition").animsition({
-      inClass: 'fade-in',
-      outClass: 'fade-out',
-      inDuration: 1500,
-      outDuration: 800,
-      linkElement: '.animsition-link',
-      // e.g. linkElement: 'a:not([target="_blank"]):not([href^=#])'
-      loading: true,
-      loadingParentElement: 'body', //animsition wrapper element
-      loadingClass: 'animsition-loading',
-      loadingInner: '', // e.g '<img src="loading.svg" />'
-      timeout: false,
-      timeoutCountdown: 5000,
-      onLoadEvent: true,
-      browser: [ 'animation-duration', '-webkit-animation-duration'],
-      // "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
-      // The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
-      overlay : false,
-      overlayClass : 'animsition-overlay-slide',
-      overlayParentElement : 'body',
-      transition: function(url){ window.location.href = url; }
-    });
+    // $(".animsition").animsition({
+    //   inClass: 'fade-in',
+    //   outClass: 'fade-out',
+    //   inDuration: 1500,
+    //   outDuration: 800,
+    //   linkElement: '.animsition-link',
+    //   // e.g. linkElement: 'a:not([target="_blank"]):not([href^=#])'
+    //   loading: true,
+    //   loadingParentElement: 'body', //animsition wrapper element
+    //   loadingClass: 'animsition-loading',
+    //   loadingInner: '', // e.g '<img src="loading.svg" />'
+    //   timeout: false,
+    //   timeoutCountdown: 5000,
+    //   onLoadEvent: true,
+    //   browser: [ 'animation-duration', '-webkit-animation-duration'],
+    //   // "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
+    //   // The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
+    //   overlay : false,
+    //   overlayClass : 'animsition-overlay-slide',
+    //   overlayParentElement : 'body',
+    //   transition: function(url){ window.location.href = url; }
+    // });
 
     $('body').addClass('ready');
 
