--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,13 @@
   <meta property="og:site_name" content="Web-expert" />
   <!-- <meta property="fb:admins" content="551598715" /> -->
   <meta property="og:description" content="WEBDEV - программирование Ваших идей" />
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MMSD2Q7');</script>
+    <!-- End Google Tag Manager -->
 
   <!-- <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
@@ -25,6 +32,7 @@
   <link rel="icon" type="image/svg+xml" sizes="any" href="img/favicon/favicon.svg">
   <!-- <link rel="shortcut icon" href="img/favicon.png" /> -->
   <script src="js/modernizr.custom.js"></script> <!-- Modernizr -->
+  
 </head>
 <div class="preloader-inner" id="preloader">
     <div class="wrap">
@@ -172,6 +180,13 @@
     </div>
 </div>
 <body id="projects">
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MMSD2Q7');</script>
+    <!-- End Google Tag Manager -->
   <div class="animsition">
 
     <div class="header">
