--- a/project-4.html
+++ b/project-4.html
@@ -2,6 +2,15 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136414018-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-136414018-1');
+</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Wise Dev</title>
@@ -15,14 +24,6 @@
   <meta property="og:site_name" content="Web-expert" />
   <!-- <meta property="fb:admins" content="551598715" /> -->
   <meta property="og:description" content="WEBDEV - программирование Ваших идей" />
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MMSD2Q7');gtag('config', 'UA-136414018-1');</script>
-    <!-- End Google Tag Manager -->
-
   <!-- <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
   <!-- <link rel="stylesheet" href="css/animsition.css"> -->
@@ -180,13 +181,6 @@
     </div>
 </div>
 <body id="project-4" class="project-detail">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MMSD2Q7');</script>
-    <!-- End Google Tag Manager -->
   <div class="animsition">
 
     <div class="header">
