--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <title>Wise Dev</title>
 
   <link rel="author" href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/"/>
-  <meta name="description" content="WEBDEV - программирование Ваших идей" />
-  <meta property="og:title" content="WEB DEV vaoooglu.github.io" />
+  <meta name="description" content="WiseDEV - программирование Ваших идей" />
+  <meta property="og:title" content="WiseDEV vaoooglu.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://vaoooglu.github.io/" />
   <meta property="og:image" content="http://vaooogly.github.io/img/share-social.png" />
   <meta property="og:site_name" content="Web-expert" />
   <!-- <meta property="fb:admins" content="551598715" /> -->
-  <meta property="og:description" content="WEBDEV - программирование Ваших идей" />
+  <meta property="og:description" content="WiseDEV - программирование Ваших идей" />
   <!-- <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
   <!-- <link rel="stylesheet" href="css/animsition.css"> -->
@@ -38,7 +38,7 @@
 <div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
-            <p>WEBDEV</p>
+            <p>Wisedev</p>
             <div class="svg_img">
               <?xml version="1.0" encoding="iso-8859-1"?>
               <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -188,15 +188,15 @@
 
     <div class="header">
       <h1>
-        <strong>W</strong>e<strong>b</strong><em></em><strong>D</strong>e<strong>v</strong>e<strong>l</strong>o<strong>p</strong>e<strong>r</strong><br><span><strong>Пр</strong>ог<strong>ра</strong>мм<strong>иро</strong>ва<strong>ние</strong> Ва<strong>ших</strong> ид<strong>ей</strong></span>
+        W<strong>i</strong>s<strong>e</strong><em></em><strong>D</strong>e<strong>v</strong>e<strong>l</strong>o<strong>p</strong>e<strong>r</strong><br><span><strong>Пр</strong>ог<strong>ра</strong>мм<strong>иро</strong>ва<strong>ние</strong> Ва<strong>ших</strong> ид<strong>ей</strong></span>
       </h1>
       <div id="particles-js"></div>
       <h1 class="front-title">
-        W<strong>e</strong>b<em></em>D<strong>e</strong>v<strong>e</strong>l<strong>o</strong>p<strong>e</strong>r<br><span>Пр<strong>ог</strong>ра<strong>мм</strong>иро<strong>ва</strong>ние<strong> Ва</strong>ших<strong> ид</strong>ей</span>
+          <strong>W</strong>i<strong>s</strong>e<em></em>D<strong>e</strong>v<strong>e</strong>l<strong>o</strong>p<strong>e</strong>r<br><span>Пр<strong>ог</strong>ра<strong>мм</strong>иро<strong>ва</strong>ние<strong> Ва</strong>ших<strong> ид</strong>ей</span>
         </h1>
         <a href="#index-content" class="cd-scroll"><img src="img/arrow-down.svg" /></a>
         </div>
-        <h2>Webdev</h2>
+        <h2>WiseDEV</h2>
         <button id="trigger-overlay" type="button"><img src="img/menu.svg" /></button>
         <div class="content">
         
@@ -218,7 +218,7 @@
               <div class="nano-content">
               
               <p>
-                <strong>WEBDEV</strong> - программирование Ваших идей.</p>
+                <strong>WiseDEV</strong> - программирование Ваших идей.</p>
 
                 <p>Меня зовут <em>Владимир Глушаков</em> и я люблю <em>Web-разработку</em>. Обожаю сотрудничать с <em>вдохновленными</em> людьми и перенимать <em>опыт</em>, люблю изучать новые технологии и создавать <em>отличные</em> работы.</p>
 
