--- a/project-2.html
+++ b/project-2.html
@@ -15,14 +15,14 @@
   <title>Wise Dev</title>
 
   <link rel="author" href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/"/>
-  <meta name="description" content="WEBDEV - программирование Ваших идей" />
-  <meta property="og:title" content="WEB DEV vaoooglu.github.io" />
+  <meta name="description" content="WiseDEV - программирование Ваших идей" />
+  <meta property="og:title" content="WiseDEV vaoooglu.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://vaoooglu.github.io/" />
   <meta property="og:image" content="http://vaooogly.github.io/img/share-social.png" />
   <meta property="og:site_name" content="Web-expert" />
   <!-- <meta property="fb:admins" content="551598715" /> -->
-  <meta property="og:description" content="WEBDEV - программирование Ваших идей" />
+  <meta property="og:description" content="WiseDEV - программирование Ваших идей" />
   <!-- <link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
   <!-- <link rel="stylesheet" href="css/animsition.css"> -->
@@ -37,7 +37,7 @@
 <div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
-            <p>WEBDEV</p>
+            <p>Wisedev</p>
             <div class="svg_img">
               <?xml version="1.0" encoding="iso-8859-1"?>
               <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -192,7 +192,7 @@
         </h1>
         <a href="#index-content" class="cd-scroll"><img src="img/arrow-down.svg" /></a>
         </div>
-        <h2><a href="index.html" title="">Webdev</a></h2>
+        <h2><a href="index.html" title="">WiseDEV</a></h2>
         <button id="trigger-overlay" type="button"><img src="img/menu.svg" /></button>
         <div class="content">
         
