--- a/contacts.html
+++ b/contacts.html
@@ -216,9 +216,13 @@
                 <dl>
                   <dt>Источник</dt> <dd>Ссылка</dd>
                   <dt>E-mail</dt> <dd><a href="mailto:vaoooglu.dn@gmail.com" target="_blank" title=""><img src="img/contacts/7.svg" /></a></dd>
+                  <dt>Skype</dt> <dd><a href="https://join.skype.com/invite/y7TQ6N4HCyFl" target="_blank" title=""><img src="img/skype.svg" /></a></dd>
+                  <dt>Telegram</dt> <dd><a href="https://t.me/vaoooglu" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd>
+                  <dt>WhatsApp</dt> <dd><a href="https://wa.me/380955145609" target="_blank" title=""><img src="img/whatsapp.svg" /></a></dd>
+                  <dt>Viber</dt> <dd><a href="viber://pa?chatURI=+380955145609" target="_blank" title=""><img src="img/viber.svg" /></a></dd>
                   <dt>LinkedIn</dt> <dd><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" title=""><img src="img/contacts/6.svg" /></a></dd>
                   <!-- <dt>Blog</dt> <dd><a href="http://www.cartesiani.it" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd> -->
-                  <dt>ВКонтакте</dt> <dd><a href="https://vk.com/vaoooglu" target="_blank" title=""><img src="img/vk-logo.svg" /></a></dd>
+                  <dt>ВКонтакте</dt> <dd><a href="https://vk.com/vaoooglu" target="_blank" title=""><img src="img/contacts/9.svg" /></a></dd>
                   <dt>Facebook</dt> <dd><a href="https://www.facebook.com/vaoooglu" target="_blank" title=""><img src="img/contacts/1.svg" /></a></dd>
                   <dt>Instagram</dt> <dd><a href="https://www.instagram.com/vaoooglu.vladimir/" target="_blank" title=""><img src="img/contacts/8.svg" /></a></dd>
                   <!-- <dt>Spotify</dt> <dd><a href="https://open.spotify.com/user/1167899421" target="_blank" title=""><img src="img/contacts/9.svg" /></a></dd> -->
