--- a/contacts.html
+++ b/contacts.html
@@ -217,8 +217,8 @@
                   <dt>Источник</dt> <dd>Ссылка</dd>
                   <dt>E-mail</dt> <dd><a href="mailto:vaoooglu.dn@gmail.com" target="_blank" title=""><img src="img/contacts/7.svg" /></a></dd>
                   <dt>Skype</dt> <dd><a href="https://join.skype.com/invite/y7TQ6N4HCyFl" target="_blank" title=""><img src="img/skype.svg" /></a></dd>
-                  <dt>Telegram</dt> <dd><a href="https://t.me/vaoooglu" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd>
-                  <dt>WhatsApp</dt> <dd><a href="https://wa.me/380955145609" target="_blank" title=""><img src="img/whatsapp.svg" /></a></dd>
+                  <dt>Telegram</dt> <dd><a href="tg://resolve?domain=vaoooglu" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd>
+                  <dt>WhatsApp</dt> <dd><a href="whatsapp://send?phone=+380955145609" target="_blank" title=""><img src="img/whatsapp.svg" /></a></dd>
                   <dt>Viber</dt> <dd><a href="viber://pa?chatURI=+380955145609" target="_blank" title=""><img src="img/viber.svg" /></a></dd>
                   <dt>LinkedIn</dt> <dd><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" title=""><img src="img/contacts/6.svg" /></a></dd>
                   <!-- <dt>Blog</dt> <dd><a href="http://www.cartesiani.it" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd> -->
