--- a/project-2.html
+++ b/project-2.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" media="screen" href="css/style-particle.css">
   <link rel="stylesheet" media="screen" href="css/nanoscroller.css">
   <link rel="stylesheet" href="css/main.css"> <!-- Resource style -->
-  <link rel="icon" type="image/svg+xml" sizes="any" href="img/favicon.svg">
+  <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
   <!-- <link rel="shortcut icon" href="img/favicon.png" /> -->
   <script src="js/modernizr.custom.js"></script> <!-- Modernizr -->
   
