--- a/project-3.html
+++ b/project-3.html
@@ -40,8 +40,6 @@
           <div class="preloader">
               <p>Wisedev</p>
               <div class="svg_img">
-                <xml version="1.0" encoding="iso-8859-1">
-                <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                    viewBox="0 0 504.123 504.123" style="enable-background:new 0 0 504.123 504.123;" xml:space="preserve">
                 <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="-14.2178" y1="627.332" x2="-14.2178" y2="527.085" gradientTransform="matrix(7.8769 0 0 -7.8769 364.0537 4969.6694)">
@@ -204,9 +202,15 @@
               <canvas class="figures"></canvas>
                             <div class="cover"></div>
                             <ol class="social">
-                              <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class=""><img src="img/linkedin.png" /></a></li>
-                              <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class=""><img src="img/facebook.png" /></a></li>
-                              <li><a href="https://vk.com/vaoooglu" target="_blank" class=""><img src="img/vk.png" /></a></li>
+                              <li><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" class="">
+                                <img src="img/linkedin.png" alt="social linkedin"/></a>
+                              </li>
+                              <li><a href="https://www.facebook.com/vaoooglu" target="_blank" class="">
+                                <img src="img/facebook.png"  alt="social facebook" /></a>
+                              </li>
+                              <li><a href="https://vk.com/vaoooglu" target="_blank" class="">
+                                <img src="img/vk.png"  alt="social vk" /></a>
+                              </li>
                             </ol>
                           </div>
                           <article class="nano">
