--- a/projects.html
+++ b/projects.html
@@ -237,18 +237,18 @@
 
                 <div class='pageDetail'>
                   <a href='project-1.html' class='detail detail-1' data-inf='Проект 1'>
-                    <img src='img/shape-026.png'>
+                    <img src='img/shape-026.png' alt="background for project1">
                   </a>
                   <a href='project-2.html' class='detail detail-2' data-inf='Проект 2'>
-                    <img src='img/shape-025.png'>
+                    <img src='img/shape-025.png' alt="background for project2">
                   </a>
                 </div>
                 <div class='pageDetail'>
                   <a href='project-3.html' class='detail detail-3' data-inf='Проект 3'>
-                    <img src='img/shape-012.png'>
+                    <img src='img/shape-012.png' alt="background for project3">
                   </a>
                   <a href='project-4.html' class='detail detail-4' data-inf='Проект 4'>
-                    <img src='img/shape-024.png'>
+                    <img src='img/shape-024.png' alt="background for project4">
                   </a>
                 </div>
               </div>
