--- a/contacts.html
+++ b/contacts.html
@@ -182,7 +182,7 @@
 
      <div class="header">
       <h1>
-        <strong>К</strong>о<strong>н</strong>т<strong>а</strong>к<strong>т</strong>ы<br><span><strong>На</strong>пи<strong>ши</strong>те <strong>Мн</strong>е<strong></span>
+        <strong>К</strong>о<strong>н</strong>т<strong>а</strong>к<strong>т</strong>ы<br><span><strong>На</strong>пи<strong>ши</strong>те <strong>Мн</strong>е</span>
       </h1>
       <div id="particles-js3"></div>
       <h1 class="front-title">
@@ -218,25 +218,25 @@
                             <div class="nano-content">
                 <dl>
                   <dt>Источник</dt> <dd>Ссылка</dd>
-                  <dt>E-mail</dt> <dd><a href="mailto:vaoooglu.dn@gmail.com" target="_blank" title=""><img src="img/contacts/7.svg" /></a></dd>
-                  <dt>Skype</dt> <dd><a href="https://join.skype.com/invite/y7TQ6N4HCyFl" target="_blank" title=""><img src="img/skype.svg" /></a></dd>
-                  <dt>Telegram</dt> <dd><a href="tg://resolve?domain=vaoooglu" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd>
-                  <dt>WhatsApp</dt> <dd><a href="whatsapp://send?phone=+380955145609" target="_blank" title=""><img src="img/whatsapp.svg" /></a></dd>
-                  <dt>Viber</dt> <dd><a href="viber://pa?chatURI=+380955145609" target="_blank" title=""><img src="img/viber.svg" /></a></dd>
-                  <dt>LinkedIn</dt> <dd><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" title=""><img src="img/contacts/6.svg" /></a></dd>
+                  <dt>E-mail</dt> <dd><a href="mailto:vaoooglu.dn@gmail.com" target="_blank" title=""><img src="img/contacts/7.svg" alt="send mail"/></a></dd>
+                  <dt>Skype</dt> <dd><a href="https://join.skype.com/invite/y7TQ6N4HCyFl" target="_blank" title=""><img src="img/skype.svg" alt="social skype"/></a></dd>
+                  <dt>Telegram</dt> <dd><a href="tg://resolve?domain=vaoooglu" target="_blank" title=""><img src="img/contacts/10.svg"  alt="social telegram"/></a></dd>
+                  <dt>WhatsApp</dt> <dd><a href="whatsapp://send?phone=+380955145609" target="_blank" title=""><img src="img/whatsapp.svg"  alt="social whatsapp" /></a></dd>
+                  <dt>Viber</dt> <dd><a href="viber://pa?chatURI=+380955145609" target="_blank" title=""><img src="img/viber.svg"  alt="social viber"/></a></dd>
+                  <dt>LinkedIn</dt> <dd><a href="https://www.linkedin.com/in/glushakov-vladimir-7b8430135/" target="_blank" title=""><img src="img/contacts/6.svg"  alt="social linkedn"/></a></dd>
                   <!-- <dt>Blog</dt> <dd><a href="http://www.cartesiani.it" target="_blank" title=""><img src="img/contacts/10.svg" /></a></dd> -->
-                  <dt>ВКонтакте</dt> <dd><a href="https://vk.com/vaoooglu" target="_blank" title=""><img src="img/contacts/9.svg" /></a></dd>
-                  <dt>Facebook</dt> <dd><a href="https://www.facebook.com/vaoooglu" target="_blank" title=""><img src="img/contacts/1.svg" /></a></dd>
-                  <dt>Instagram</dt> <dd><a href="https://www.instagram.com/vaoooglu.vladimir/" target="_blank" title=""><img src="img/contacts/8.svg" /></a></dd>
+                  <dt>ВКонтакте</dt> <dd><a href="https://vk.com/vaoooglu" target="_blank" title=""><img src="img/contacts/9.svg"  alt="social vk"/></a></dd>
+                  <dt>Facebook</dt> <dd><a href="https://www.facebook.com/vaoooglu" target="_blank" title=""><img src="img/contacts/1.svg"  alt="social facebook"/></a></dd>
+                  <dt>Instagram</dt> <dd><a href="https://www.instagram.com/vaoooglu.vladimir/" target="_blank" title=""><img src="img/contacts/8.svg"  alt="social instagram"/></a></dd>
                   <!-- <dt>Spotify</dt> <dd><a href="https://open.spotify.com/user/1167899421" target="_blank" title=""><img src="img/contacts/9.svg" /></a></dd> -->
                   <!-- <dt>Pinterest</dt> <dd><a href="https://www.pinterest.com/marcosors/" target="_blank" title=""><img src="img/contacts/5.svg" /></a></dd> -->
-                  <dt>Google+</dt> <dd><a href="https://plus.google.com/u/0/114345737835687167963" target="_blank" title=""><img src="img/contacts/2.svg" /></a></dd>
+                  <dt>Google+</dt> <dd><a href="https://plus.google.com/u/0/114345737835687167963" target="_blank" title=""><img src="img/contacts/2.svg"  alt="social google+" /></a></dd>
                 </dl>
                 <section class="thanks">
                   <h4>Благодарность</h4>
                   <p>Спасибо Vincent Garreau за <a href="https://github.com/VincentGarreau/particles.js/" target="_blank">particle.js</a> и Matt DesLauriers за <a href="https://github.com/mattdesl/svg-mesh-3d" target="_blank">svg-mesh-3d</a></p>
 
-                  <p>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+                  <p>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
                 </section>
               </div>
             </article>
